--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
             <nav class="navbar">
                    <a href="#" class="logo">Bank<span>IT</span></a>
                    <ul id="sidemenu">
-                         <li><a href="">Home</a></li>
-                         <li><a href="feat">Features</a></li>
-                         <li><a href="">Careers</a></li>
+                         <li><a href="index.html">Home</a></li>
+                         <li><a href="#features">Features</a></li>
+                         <li><a href="#cards">Cards</a></li>
+                         <li><a href="#careers">Careers</a></li>
                          <img src="images/cancel.PNG" alt="" class="btn" onclick="closemenu()">
                    </ul>
                    <a href="" class="open-account">Login</a>
@@ -37,7 +38,7 @@
             </div>
         </section>
 
-        <section>
+        <section id="features">
             
                 <h1 class="heading">Features</h1>
                 <p class="heading-text">Explore the modern, reliable and better banking with us!</p>
@@ -64,7 +65,7 @@
             </div>
         </section>
 
-        <section>
+        <section id="cards">
             <h1 class="heading">Our Top Cards</h1>
              <p class="heading-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quod odio possimus minima voluptatum excepturi voluptatem iure natus, neque reprehenderit.</p>
             <div class="section">
@@ -101,7 +102,7 @@
             </div>
         </section>
 
-        <section>
+        <section id="careers">
             <h1 class="heading">Careers</h1>
             <p class="heading-text careers">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt totam voluptate veritatis optio. Vitae voluptas sunt adipisci iusto perferendis animi, repudiandae voluptatibus magnam. Voluptatibus beatae architecto rerum animi magnam! Tempore...</p>
             <a href="" class="read-more">Read More</a>
@@ -109,19 +110,19 @@
 
         <footer>
             <div class="footer">
-            <div class="last-message">
-               <h1 class="message">You are not late, <br>you can still make the best<br> desicion today.</h1>
-               <a href="" class="open-account">Open an Account</a>
-            </div>
-            <div class="footer">
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Pricing</a></li>
-                    <li><a href="">Terms & conditions</a></li>
-                    <li><a href="">Careers</a></li>
-                    <li><a href="">Contact us</a></li>
-                </ul>
-            </div>
+               <div class="last-message">
+                   <h1 class="message">You are not late, <br>you can still make the best<br> desicion today.</h1>
+                   <a href="" class="open-account">Open an Account</a>
+               </div>
+               <div class="footer2">
+                   <ul>
+                       <li><a href="index.html">Home</a></li>
+                       <li><a href="">Pricing</a></li>
+                       <li><a href="">Terms & conditions</a></li>
+                       <li><a href="#careers">Careers</a></li>
+                        <li><a href="">Contact us</a></li>
+                   </ul>
+               </div>
             </div>
         </footer>
     </div>
